--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_install:
 install:
   - conda install --yes pip
   - conda install --yes --file requirements.txt;
-  - conda install -c conda-forge geopandas
+  - conda install --yes -c conda-forge geopandas
   - pip install -r requirements_tests.txt
   # configure dual tests (for dependency libpysal)
   - if "$PYSAL_PYPI"; then
